# sndfile-tools

./: .gitignore  CMakeLists.txt
src/: common.c  jackplay.c  resample.c  waveform.c
